# Estimate

./: .prettierrc.yml  Makefile  README.md  compose.yaml  pnpm-lock.yaml
backend/: .gitignore  main.py  package-lock.json  package.json  pyproject.toml  tsconfig.json
backend/migrations/: env.py
backend/migrations/versions/: 1bbc7a20b898_create_table_about.py  2d67bbe78b64_add_estimate_table.py  406e215db4c2_delete_table_refreshtoken.py  5ee9a94c4615_update_estimate_model.py  658718e8e6eb_rename_table_users.py  70531d465967_add_column_created_at_to_user_table.py  7ddbc12af1af_create_user_model.py  81958e46153c_add_index_to_info_created_at.py  a108d7bebe20_change_table_name.py  baa014613528_add_refreshtokens_table.py
backend/src/: index.ts
backend/src/api/: __init__.py  app.py  auth.py  dependencies.py  estimate.py  info.py  middleware.py  routing.py  user.py
backend/src/core/: __init__.py  base.py  settings.py
backend/src/models/: __init__.py  _base_model.py  about.py  app.py  auth.py  estimate.py  user.py
backend/src/orm/: __init__.py  _base.py  auth.py  estimate.py  info.py  user.py
backend/src/schemas/: __init__.py  app.py  auth.py  estimate.py  info.py  requests.py  responses.py  user.py
backend/src/services/: auth.py
backend/src/utils/: __init__.py  auth.py  common.py  get_user_or_error.py  hash.py  logger.py  on_startup.py
frontend/: .prettierrc.yaml  eslint.config.js  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.tsx  config.ts  main.tsx
frontend/src/components/AddEstimateForm/: index.tsx  types.ts
frontend/src/components/AutoSaveInput/: index.tsx  types.ts
frontend/src/components/EstimateBody/: index.tsx
frontend/src/components/EstimateFooter/: index.tsx
frontend/src/components/EstimateHeader/: index.module.scss  index.tsx
frontend/src/components/InfoForm/: index.tsx
frontend/src/components/Layout/: index.module.scss  index.tsx
frontend/src/contexts/AppContext/: context.ts  provider.tsx  types.ts
frontend/src/contexts/EstimateContext/: context.ts  provider.tsx  types.ts
frontend/src/core/apiClient/: index.ts  types.ts
frontend/src/core/schemas/: auth.ts  estimate.ts  index.ts  info.ts  responses.ts  user.ts
frontend/src/libs/: config.ts
frontend/src/libs/apiClient/: index.ts  types.ts
frontend/src/pages/: index.ts  routes.ts
frontend/src/pages/AboutPage/: index.tsx
frontend/src/pages/EstimatePage/: index.module.scss  index.tsx
frontend/src/pages/EstimatesPage/: index.module.scss  index.tsx
frontend/src/routes/: index.tsx
frontend/src/schemas/: auth.ts  index.ts  info.ts
frontend/src/styles/: _vars.scss  global.scss  mixins.scss  vars.scss
(+20 files in other folders)
